Update node example to also install dev dependencies

--- a/node-hello-world/.envyfile
+++ b/node-hello-world/.envyfile
@@ -5,7 +5,7 @@ environment:
     - name: npm install
       type: script
       run:
-        - "npm install"
+        - "npm install --dev"
       triggers:
         files:
           - package.json
