--- a/ruby-hello-world/.envyfile
+++ b/ruby-hello-world/.envyfile
@@ -3,6 +3,7 @@ environment:
     image: ruby:stretch
   setup-steps:
     - name: bundle
+      label: "Installing ruby gems"
       type: script
       run:
         - "bundle install"
